Updated docs to make older status marks less obtrusive. Changed BOLDED RED to Plain Black text. Issue#: 2656146
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@9573 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/docs/pcgen.css
+++ b/docs/pcgen.css
@@ -142,6 +142,10 @@ a img {
 	font-weight: bold;
 	margin-bottom: -10px;
 }
+.status {
+	color: #000000;
+	margin-bottom: -10px;
+}
 .underline {
 	text-decoration: underline;
 }
